k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprofile
  labels:
    app: vprofile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vprofile
  template:
    metadata:
      labels:
        app: vprofile
    spec:
      containers:
      - name: vprofile
        image: dinesh4136/vprofile:latest  # <-- This gets replaced by Jenkins
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
