k8s/service.yaml
# vprofile-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprofile-service
  namespace: vprofile
spec:
  type: ClusterIP
  selector:
    app: vprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
