k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vprofile.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vprofile-service
            port:
              number: 8080
